# Dust_CustomController

./: .gitmodules  CMakeLists.txt  flash.jlink
App/: CMakeLists.txt  angle_reader.cpp  angle_reader.h  debug_tools.cpp  debug_tools.h  referee_sender.cpp  referee_sender.h  system_startup.cpp  system_startup.h
Board/xtu-board/: .mxproject  250121New_Project.ioc  CMakeLists.txt  STM32F407XX_FLASH.ld
Board/xtu-board-v2/: .mxproject  CMakeLists.txt  Dust_CustomController.ioc
Board/xtu-board-v2/Inc/: main.h  stm32f4xx_it.h
Board/xtu-board-v2/Port/: bsp_adc_port.cpp  bsp_gpio_port.cpp  bsp_uart_port.cpp
Board/xtu-board-v2/Src/: adc.c  dma.c  gpio.c  main.c  stm32f4xx_it.c  usart.c
Board/xtu-board/Inc/: FreeRTOSConfig.h  stm32f4xx_it.h  usart.h
Board/xtu-board/Port/: bsp_uart_port.cpp
Board/xtu-board/Src/: dma.c  main.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  usart.c
Device/: crc.c  crc.cpp  crc.h
Driver/: CMakeLists.txt
Platform/: CMakeLists.txt  bsp_adc_port.h  bsp_gpio_port.h  bsp_uart_port.h
cmake/: DustOptions.cmake
comm_topics/: angle_topic.hpp  input_topic.hpp
